fix(tables): ensure proper alignment for SVGs in tables

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -37,6 +37,7 @@
   }
 
   img,
+  svg,
   [class^="svg-"],
   [class^="icon-"],
   [class*=" icon-"] {
